...
        android:layout_height="wrap_content"
        android:minHeight="?android:actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorMain"
        android:elevation="4dp">
        <ImageView
            android:id="@+id/actionBarAddButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:visibility="visible"
            android:background="@null"
            android:src="@drawable/ic_add2"/>

        <!--編集ボタン-->
        <Button
            android:id="@+id/actionBarSaveButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/post_edit_button"
...
