...
        tools:context=".PostCreateFragment">

        <TextView
            style="@style/AsudokuColumnHeader.Write"
            android:text="@string/titleHeaderText" />
        <EditText
            android:id="@+id/titleCreate"
            android:theme="@style/AsudokuColumn.Write"
            style="@style/AsudokuColumn.Write" />

        <!--評価-->
        <TextView
            style="@style/AsudokuColumnHeader.Write"
...
