...
            <TextView
                android:id="@+id/titleHeader"
                style="@style/AsudokuColumnHeader.Read"
                android:text="@string/titleHeaderText" />

            <TextView
                android:id="@+id/title"
                style="@style/AsudokuColumn.Read"
                android:textColor="@color/colorText"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/author"
...
